--- a/info.yaml
+++ b/info.yaml
@@ -1,32 +1,32 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
+  title:        "Tiny Eater 8 Bit"      # Project title
+  author:       "Jason Kaufmann"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
-  language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  description:  "Recreation of Ben Eater's 8 bit breadboard computer"      # One line description of what your project does
+  language:     "System Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
+  clock_hz:     12000000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "eater_8bit"
   
   # List your project's source files here. Source files must be in ./src and you must list each source file separately, one per line:
   source_files:        
-    - "project.v"
+    - "project.sv"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
+  ui[0]: "prog_mode"
+  ui[1]: "addr0"
+  ui[2]: "addr1"
+  ui[3]: "addr2"
+  ui[4]: "addr3"
+  ui[5]: "clock_change_mode"
+  ui[6]: "clock_max_count"
   ui[7]: ""
 
   # Outputs
@@ -40,14 +40,14 @@ pinout:
   uo[7]: ""
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "data0"
+  uio[1]: "data1"
+  uio[2]: "data2"
+  uio[3]: "data3"
+  uio[4]: "data4"
+  uio[5]: "data5"
+  uio[6]: "data6"
+  uio[7]: "data7"
 
 # Do not change!
 yaml_version: 6
