--- a/test/Makefile
+++ b/test/Makefile
@@ -5,7 +5,7 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 SRC_DIR = $(PWD)/../src
-PROJECT_SOURCES = project.v
+PROJECT_SOURCES = project.sv alu.sv clock.sv decoder.sv eightBit.sv program_counter.sv register.sv
 
 ifneq ($(GATES),yes)
 
